wip. legend alignment fixed in table

--- a/indexter.css
+++ b/indexter.css
@@ -52,6 +52,7 @@ a:hover {
 	}
 
 p { 
+	line-height: 5px;
 /* line-height: 1.4em;
 	margin: 5px;
 	padding: 5px;
